--- a/LAB_3/S&Q/Stack&Queue/Stack&Queue/Stack&Queue.vcxproj
+++ b/LAB_3/S&Q/Stack&Queue/Stack&Queue/Stack&Queue.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ELement.cpp" />
+    <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Queue.cpp" />
     <ClCompile Include="SinglyLinkedList.cpp" />
@@ -136,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ELement.h" />
+    <ClInclude Include="Matrix.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="SinglyLinkedList.h" />
