--- a/LAB_5/UngDung_1/dictionary (Eng_Vie)/dictionary (Eng_Vie)/dictionary (Eng_Vie).vcxproj
+++ b/LAB_5/UngDung_1/dictionary (Eng_Vie)/dictionary (Eng_Vie)/dictionary (Eng_Vie).vcxproj
@@ -137,6 +137,9 @@
     <ClInclude Include="Dictionary.h" />
     <ClInclude Include="Node.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="data.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
