--- a/LAB_2/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/LAB_2/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{e17fe52f-3c11-4cdd-92f9-364eb4140f31}</ProjectGuid>
     <RootNamespace>ConsoleApplication1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>LinkedList</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
